# csp-tool-safety-profile

./: .gitignore  ANTI_AGENT_MANIFESTO.md  CODE_RED.md  CONSTITUTIONAL_RECEIPT_STANDARD_v0.1.md  CONTROL_MAP.md  FOR_HUMANS.md  IMPLEMENTORS.md  LIVING_CONSTITUTION_DEMO.md  MCP_GATEWAY_MAP.md  MCP_MINIMUM_PROFILE.md  Makefile  README.md  REASON_CODES.md  SECURITY.md  SPEC.md  TENSIONS.md  control_map.yaml
.github/workflows/: test.yml
conformance/: README.md
examples/: README.md
examples/anti_demo/: README.md  demo.py
examples/python_demo/: README.md
examples/python_demo/real_exec/: real_runner.py
examples/sandbox/: README.md  real_runner.py
examples/simulated/: README.md  demo.py  test_classifier.py  verify_episode.py
examples/simulated/assay_demo/: __init__.py  tool_safety.py
incidents/: ANTIGRAVITY.md
reference/python_gateway/: .gitignore  README.md  pyproject.toml
reference/python_gateway/src/assay_gateway/: __init__.py  authn.py  authz.py  credentials.py  gateway.py  incident.py  preflight.py  receipts.py  registry.py  sandbox.py  types.py
reference/python_gateway/src/csp_gateway/: __init__.py  authn.py  authz.py  credentials.py  gateway.py  incident.py  preflight.py  receipts.py  registry.py  sandbox.py  types.py
reference/python_gateway/tests/: __init__.py  conftest.py  test_conformance.py
schemas/: receipt.schema.json
scripts/: assay_validate.py  crypto_core.py  csp_validate.py  ritual_lint.py
strategy/: ADOPTION_PLAYS.md  EXPERIMENT_LOG.md  RORY_PRINCIPLES.md  RUNCARDS.yaml
tools/: leak_gate.sh
