[project]
name = "csp-gateway-reference"
version = "0.1.0"
description = "CSP MCP Gateway Reference Implementation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tim B. Haserjian"}
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csp_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W"]

[tool.ruff.isort]
known-first-party = ["csp_gateway"]
